--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -14,6 +14,9 @@ default: &default
   NUNTIUM_INCOMING_USER: ''
   NUNTIUM_INCOMING_PWD: ''
 
+  ELASTICSEARCH_URL: 'http://localhost:9200'
+  STREAM_ALERT_DATABASE_PASSWORD: ''
+
 development:
   <<: *default
 
