--- a/config/database.yml
+++ b/config/database.yml
@@ -12,10 +12,11 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: 5
+  pool: 50
   username: root
-  password:
+  password: <%= ENV['STREAM_ALERT_DATABASE_PASSWORD'] %>
   host: localhost
+  database: stream_alert
 
 development:
   <<: *default
@@ -49,6 +50,3 @@ test:
 #
 production:
   <<: *default
-  database: stream_alert_production
-  username: stream_alert
-  password: <%= ENV['STREAM_ALERT_DATABASE_PASSWORD'] %>
