--- a/config/application.travis.yml
+++ b/config/application.travis.yml
@@ -5,6 +5,7 @@ default: &default
   TIME_ZONE: 'Bangkok'
 
   FEED_ALERT_MAIL: "channa.ly@gmail.com"
+  SUPPORT_EMAIL: ''
 
   MANDRILL_USERNAME: 'channa.info@gmail.com'
   MANDRILL_PASSWORD: 'f3dQZgGqJGiojkNQfcpiBg'
