--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -5,6 +5,7 @@ default: &default
   TIME_ZONE: 'Bangkok'
 
   FEED_ALERT_MAIL: "channa.ly@gmail.com"
+  SUPPORT_EMAIL: 'support@feedalert.com'
 
   MANDRILL_USERNAME: ''
   MANDRILL_PASSWORD: ''
