docs for upstart and monit

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,4 +2,4 @@ development:
   :pidfile: tmp/pids/sidekiq.pid
 
 production:
-  :pidfile: ../shared/tmp/pids/sidekiq.pid
+  :pidfile: ../../shared/tmp/pids/sidekiq.pid
