--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -4,8 +4,9 @@ default: &default
 
   TIME_ZONE: 'Bangkok'
 
-  FEED_ALERT_MAIL: "channa.ly@gmail.com"
+  FEED_ALERT_EMAIL: "channa.ly@gmail.com"
   SUPPORT_EMAIL: 'support@feedalert.com'
+  NO_REPLY_EMAIL: "channa.ly@gmail.com"
 
   MANDRILL_USERNAME: ''
   MANDRILL_PASSWORD: ''
