--- a/config/database.yml
+++ b/config/database.yml
@@ -11,10 +11,10 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
 
   # http://stackoverflow.com/questions/1008287/illegal-mix-of-collations-mysql-error
-  collation: utf8_general_ci
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
 
   pool: 50
   username: root
