move cron to sidekiq-cron

--- a/docs/upstart/sidekiq-upstart.conf
+++ b/docs/upstart/sidekiq-upstart.conf
@@ -31,6 +31,6 @@ exec /bin/bash <<'EOT'
 
 
   echo "user is $(whoami) and pwd is $(pwd) and rbenv is located at $(which rbenv)"  
-  exec bundle exec sidekiq -e production
+  exec bundle exec sidekiq -q default -q mailers -q cron -e production
 EOT
 end script
