preload query in edit alert

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -5,8 +5,7 @@ production:
   :pidfile: ../../shared/tmp/pids/sidekiq.pid
 
 :queues:
-  - [mailers, 4]
-  - [default, 3]
-  - [low_priority, 2]
+  - [default, 2]
+  - low_priority
   - lowest_priority
 
