--- a/config/sidekiq-main.yml
+++ b/config/sidekiq-main.yml
@@ -1,7 +1,6 @@
 :concurrency: 25
 development:
   :pidfile: tmp/pids/sidekiq-main.pid
-  # :logfile: log/sidekiq-main.log
 
 production:
   :pidfile: ../../shared/tmp/pids/sidekiq-main.pid
@@ -11,4 +10,5 @@ production:
 :queues:
   - mailers
   - default
+  - indexer
 
