--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -29,6 +29,7 @@ default: &default
 
   PROCESS_TIME_IN_MINUTES: '30'
   DELAY_DELIVER_IN_MINUTES: '10'
+  SLEEP_BETWEEN_REQUEST_IN_SECOND: '0'
 
   MAX_ERROR_NUMBER: '3'
 
