Fixes inconsistent application and travis yml

--- a/config/application.travis.yml
+++ b/config/application.travis.yml
@@ -29,7 +29,16 @@ default: &default
   STREAM_ALERT_DATABASE_PASSWORD: ''
 
   PROCESS_TIME_IN_MINUTES: '30'
-  DELAY_DELIVER_IN_MINUTES: '10'
+  DELAY_DELIVER_IN_MINUTES: '1'
+  SLEEP_BETWEEN_REQUEST_IN_SECOND: '0'
+
+  MAX_ERROR_NUMBER: '10'
+
+  GOOGLE_ANALYTIC: ''
+
+  SIDEKIQ_USERNAME: ''
+  SIDEKIQ_PASSWORD: ''
+  NEW_RELIC_KEY: ''
 
 development:
   <<: *default
