--- a/config/sidekiq-main.yml
+++ b/config/sidekiq-main.yml
@@ -1,6 +1,6 @@
 :concurrency: 25
 development:
-  :pidfile: tmp/pids/sidekiq-main.pid
+  # :pidfile: tmp/pids/sidekiq-main.pid
 
 production:
   :pidfile: ../../shared/tmp/pids/sidekiq-main.pid
