--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - elasticsearch
     tty: true
     stdin_open: true
+    env_file: app.env
     ports:
       - "3000:3000"
 
@@ -44,7 +45,7 @@ services:
     ports: []
 
   elasticsearch:
-    image: elasticsearch:1.4.5
+    image: elasticsearch-mapper-attachment:latest
     environment:
       - discovery.type=single-node
     volumes:
