update smtp setting for development

--- a/app.env.example
+++ b/app.env.example
@@ -7,6 +7,7 @@ FEED_ALERT_EMAIL=borey@instedd.org
 SUPPORT_EMAIL=support@feedalert.com
 NO_REPLY_EMAIL=borey@instedd.org
 
+SMTP_ADDRESS=
 MANDRILL_USERNAME=
 MANDRILL_PASSWORD=
 
